<?xml version="1.0"?>
<package format="3">
  <name>barxt_ros2</name>
  <version>0.1.0</version>
  <description>ROS2 Python node for validated Blue Robotics BarXT pressure/depth sensor data.</description>
  <maintainer email="ksh@example.com">ksh</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>diagnostic_updater</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

